--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 appnope==0.1.2
+argon2-cffi==20.1.0
+async-generator==1.10
 attrs==21.2.0
 backcall==0.2.0
 base58==2.1.0
 bitarray==1.2.2
+bleach==3.3.0
 certifi==2021.5.30
+cffi==1.14.5
 chardet==4.0.0
 cytoolz==0.11.0
 decorator==5.0.9
+defusedxml==0.7.1
+entrypoints==0.3
 eth-abi==2.1.1
 eth-account==0.5.4
 eth-hash==0.3.1
@@ -19,32 +25,59 @@ hexbytes==0.2.1
 idna==2.10
 ipdb==0.13.8
 ipfshttpclient==0.7.0a1
+ipykernel==5.5.5
 ipython==7.24.0
 ipython-genutils==0.2.0
 jedi==0.18.0
+Jinja2==3.0.1
 jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
 lru-dict==1.1.7
+MarkupSafe==2.0.1
 matplotlib-inline==0.1.2
+mistune==0.8.4
 multiaddr==0.0.9
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
 netaddr==0.8.0
+notebook==6.4.0
+numpy==1.20.3
+packaging==20.9
+pandas==1.2.4
+pandocfilters==1.4.3
 parsimonious==0.8.1
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
+prometheus-client==0.10.1
 prompt-toolkit==3.0.18
 protobuf==3.17.1
 ptyprocess==0.7.0
+pycparser==2.20
 pycryptodome==3.10.1
 Pygments==2.9.0
+pyparsing==2.4.7
 pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2021.1
+pyzmq==22.1.0
 requests==2.25.1
 rlp==2.0.1
+Send2Trash==1.5.0
 six==1.16.0
+terminado==0.10.0
+testpath==0.5.0
 toml==0.10.2
 toolz==0.11.1
+tornado==6.1
 traitlets==5.0.5
 urllib3==1.26.5
 varint==1.0.2
 wcwidth==0.2.5
 web3==5.19.0
+webencodings==0.5.1
 websockets==8.1
